--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -71,7 +71,7 @@ h2, h4, p, li { font-weight: 400 } /* 400 is normal */
 .types p  { font-size: 16px; color: #021647; margin-top:10px; margin-bottom: 10px;}
 
 
-.two .col-md-6 { padding-bottom: 120px; padding-top: 50px margin-right: 120px margin-left: 120px ; } 
+.two .col-md-6 { padding-bottom: 120px; padding-top: 50px ; margin-right: 120px ; margin-left: 120px ; } 
 .two h3 { color: #116B3C }
 .two p { color: black }
 
@@ -105,11 +105,10 @@ h2, h4, p, li { font-weight: 400 } /* 400 is normal */
     height: 60px;
     transition: background-color .5s ease 0s;}
 
-ul.dropdown-menu {
-    background-color: black;}
+ul.dropdown-menu { background-color: black;}
 
 
-@media (max-width: 992px) {  body
+@media (max-width: 992px) {  body }
   {  background:red;}
   .opaque-navbar {
     background-color: black;
