--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -1,6 +1,5 @@
 html, body { height: 100%}
-body { padding-top:0px; 
-		max-width: 1366px; margin: 6px auto}
+body { padding-top:0px; max-width: 1366px; margin: 0 auto 40px auto}
 
 
 
@@ -11,8 +10,8 @@ ul.navbar-nav.mr-auto li.nav-item a.nav-link { font-family: sans-serif }
 ul.navbar-nav.mr-auto li.nav-item a.nav-link { color: #15BC65; opacity: 0.7}
 ul.navbar-nav.mr-auto li.nav-item a.nav-link.active { color: #6735a1; opacity: 1 }
 
-.navbar .btn-get-in-touch { background-color: #0BF23E; color: #fff }
-.navbar .btn-get-in-touch:hover, .navbar .btn-get-in-touch:active { background: #0BF23E }
+.navbar .btn-shop { background-color: #0BF23E; color: #fff }
+.navbar .btn-shop:hover, .navbar .btn-shop:active { background: #0BF23E }
 .navbar-nav a.nav-link { text-transform: uppercase; font-weight: 700; margin-left: 30px }
 
 
@@ -30,15 +29,15 @@ h2, h4, p, li { font-weight: 400 } /* 400 is normal */
 .container-section-home-page hr.color-center-line { background-color: #08A256 }
 .bg-highlight-light { padding: 42px 0px 48px 0px }
 .bg-highlight-light { background: #E0E7DE }
-.bg-highlight-light .container-get-in-touch p.history { color: #116B3C } 
-.bg-highlight-light .container-get-in-touch p.history1 { color: #116B3C; font-size: 35px }
+.bg-highlight-light .container-text p.history { color: #116B3C } 
+.bg-highlight-light .container-text p.history1 { color: #116B3C; font-size: 35px }
 
 .container-get-in-touch { text-align: center }
 .container-get-in-touch p { color:  #021647; font-size:25px; text-align: center; margin: 0 auto; width: 90% }
 
 
 
-.images-shadow { box-shadow: 5px 10px 8px #888 }
+.images-shadow { box-shadow: 5px 10px 8px #888 ; margin-bottom: 5%;}
 
 
 
@@ -46,21 +45,21 @@ h2, h4, p, li { font-weight: 400 } /* 400 is normal */
 
 
 .jumbotron-person {
-	background-image: url('../img/person.jpg');
-	background-size: cover; 
-	text-align: center; 
-	display:flex; align-items:center; 
-	position: relative; z-index: 2;
-	margin-bottom:50px}
+    background-image: url('../img/person.jpg');
+    background-size: cover; 
+    text-align: center; 
+    display:flex; align-items:center; 
+    position: relative; z-index: 2;
+    margin-bottom:50px}
 
-.jumbotron-person::after { 	content: ''; position: absolute; top: 0; left: 0; right: 0; bottom: 0; 	z-index: -1;
-							background: rgba(20, 20, 20, .5);}
+.jumbotron-person::after {  content: ''; position: absolute; top: 0; left: 0; right: 0; bottom: 0;  z-index: -1;
+                            background: rgba(20, 20, 20, .5);}
 
 .jumbotron-person, .jumbotron-person::after { height: 480px }
 
 .jumbotron-person h1, .jumbotron-person h2 {
-	color:#fff; font-weight: 700; margin: 0 auto;
-	line-height: 1.3; text-shadow: 2px 2px #222;}
+    color:#fff; font-weight: 700; margin: 0 auto;
+    line-height: 1.3; text-shadow: 2px 2px #222;}
 
 .jumbotron-person h1 { font-size:72px; margin-bottom:2% }
 .jumbotron-person h2 { font-size:32px; font-weight:400; max-width:70% }
@@ -71,15 +70,16 @@ h2, h4, p, li { font-weight: 400 } /* 400 is normal */
 .types p  { font-size: 16px; color: #021647; margin-top:10px; margin-bottom: 10px;}
 
 
-.two .col-md-6 { padding-bottom: 120px; padding-top: 50px ; margin-right: 120px ; margin-left: 120px ; } 
+.two .col-md-6 { padding-bottom: 50px; padding-top: 50px; } 
 .two h3 { color: #116B3C }
 .two p { color: black }
 
-.col-md-6.padding-top-bottom { padding: 5% 0 5% 0}
+.col-md-6.padding-top-bottom { padding: 1% 0 1% 0}
 .col-md-6.narrow-col { padding-left:8%; padding-right:8% }
 .col-md-6 { padding: 5% 0 5% 0}
 .col-md-6 { padding-left:8%; padding-right:8% }
-.col-md-4.padding-top-bottom { padding: 5% 0 5% 0}
+
+.col-md-4.padding-top-bottom { padding: 1% 0 1% 0%}
 .col-md-4.narrow-col { padding-left:4%; padding-right:4% }
 
 
@@ -105,12 +105,21 @@ h2, h4, p, li { font-weight: 400 } /* 400 is normal */
     height: 60px;
     transition: background-color .5s ease 0s;}
 
-ul.dropdown-menu { background-color: black;}
+ul.dropdown-menu { background-color: black ;}
 
 
-@media (max-width: 992px) {  body }
-  {  background:red;}
-  .opaque-navbar {
-    background-color: black;
+@media (max-width: 992px) {
+.opaque-navbar {background-color: #000;
     height: 60px;
-    transition: background-color .5s ease 0s;}
+    transition: background-color .5s ease 0s }
+
+.navbar-nav { background-color: #000; }
+.navbar-toggler {border: 1px solid #fff;}
+.navbar-toggler-icon i {color: #fff}
+
+.jumbotron-person h1 {font-size: 52px}
+.jumbotron-person h3 {font-size: 22px}
+.h3, .h4 {font-size: 1.5rem }
+.container-section-heading p,
+.container-text p {font-size: 18px}
+.two .col-md6 {padding-bottom: 20px} }
